--- a/app/views/shared/_top_header.html.erb
+++ b/app/views/shared/_top_header.html.erb
@@ -2,7 +2,7 @@
 <div data-controller="hide-header">
   <header class="top-header" data-hide-header-target="header" style="position: relative; z-index: 10; padding-bottom: 0.4rem;">
     <div class="app-title-container">
-      <%= image_tag "medfly-logo.png", alt: "MedFly Logo", class: "medfly-logo" %>
+      <%= image_tag "https://res.cloudinary.com/dzpmd1gw1/image/upload/v1749200554/medfly-logo_dthtwn.png", alt: "MedFly Logo", class: "medfly-logo" %>
       <div class="app-name">MedFly</div>
     </div>
     <!-- <div class="user-icon"></div> -->
